--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,8 @@
 
     {% include contact-link.html %}
 
-    <div class="copyright">Copyright &copy; {{site.time | date: '%Y'}} <a href="/">{{ site.data.settings.title }}</a> — All right Reserved. Power by <a href="https://jekyllrb.com/">Jekyll</a>.</div>
+    <div class="copyright">Copyright &copy; {{site.time | date: '%Y'}} <a href="/">{{ site.data.settings.title }}</a> — All Right Reserved.</div>
 </div>
 </footer>
 <!-- end footer -->
+<!--Power by <a href="https://jekyllrb.com/">Jekyll</a>.-->
